welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:11: error: type mismatch;
 found   : Unit
 required: Int
}
^